--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HardHats</string>
     <string name="login_LogIn">LOG IN</string>
+    <string name="login_Register" >REGISTER</string>
 </resources>
