Added register activity (non functional). Passwords are case sensitive now. Added textboxes to describe edit texts. Made landscape versions. Wrote some php for the server to create a user.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">HardHats</string>
     <string name="login_LogIn">LOG IN</string>
     <string name="login_Register" >REGISTER</string>
+    <string name="login_Username">Username:</string>
+    <string name="login_Password">Password:</string>
+    <string name="register_Username">Username:</string>
+    <string name="register_Password">Password:</string>
+    <string name="register_ConfirmPassword">Confirm Password:</string>
+    <string name="register_register">REGISTER</string>
+
 </resources>
