--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="register_Password">Password:</string>
     <string name="register_ConfirmPassword">Confirm Password:</string>
     <string name="register_register">REGISTER</string>
+    <string name="register_cancel">CANCEL</string>
 
 </resources>
