--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="register_ConfirmPassword">Confirm Password:</string>
     <string name="register_register">REGISTER</string>
     <string name="register_cancel">CANCEL</string>
+    <string name="about_about">About\n\nAuthors:</string>
+    <string name="login_About">About</string>
 
 </resources>
