--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,17 @@
 <resources>
     <string name="app_name">HardHats</string>
-    <string name="login_LogIn">LOG IN</string>
+    <string name="login_Login">LOG IN</string>
     <string name="login_Register">REGISTER</string>
     <string name="login_Username">Username</string>
     <string name="login_Password">Password</string>
     <string name="register_Username">Username (5-20 Characters)</string>
     <string name="register_Password">Password (5-20 Characters)</string>
     <string name="register_ConfirmPassword">Confirm Password:</string>
-    <string name="register_register">REGISTER</string>
-    <string name="register_cancel">CANCEL</string>
-    <string name="about_about">About\n\nAuthors:</string>
+    <string name="register_Register">REGISTER</string>
+    <string name="register_Cancel">CANCEL</string>
+    <string name="about_About">About\n\nAuthors:</string>
     <string name="login_About">About</string>
-    <string name="registration_registration">Registration</string>
+    <string name="registration_Registration">Registration</string>
     <string name="title_activity_menu">MenuActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
@@ -20,7 +20,7 @@
     <string name="navigation_Customers">Customers</string>
     <string name="navigation_Reports">Reports</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_Options">Options</string>
     <string name="fragmentoptions_Logout">LOGOUT</string>
