--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="street">Street</string>
     <string name="town">Town</string>
     <string name="state">State</string>
+    <string name="zip_code">Zip Code</string>
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
