--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,21 @@
     <string name="invoice_navigation_frag_text">Invoices</string>
     <string name="customer_navigation_frag_text">Customer</string>
     <string name="options_navigation_frag_text">Options</string>
+    <string name="fragment_generateinvoice_GenerateInvoice">Generate Invoice</string>
+    <string name="title_activity_login2">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="title_activity_generate_invoice">GenerateInvoiceActivity</string>
+    <string name="createinvoice_cancel">CANCEL</string>
 </resources>
