--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,8 @@
     <string name="generateinvoice_address">Address</string>
     <string name="generateinvoice_choosecustomer">CHOOSE CUSTOMER</string>
     <string name="generateinvoice_usegeneralcontractor">Use General Contractor Email?</string>
+    <string name="generateinvoice_AddLine">Add Line</string>
+    <string name="generateinvoice_cancel">CANCEL</string>
 
     <string-array name="states">
         <item>AL</item>
