--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,8 @@
     <string name="town">Town</string>
     <string name="state">State</string>
     <string name="zip_code">Zip Code</string>
+    <string name="company">Company Name</string>
+    <string name="fax_number">Fax Number</string>
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
