--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="invoicecreate_cancel">Cancel</string>
     <string name="invoicecreate_finishline">Finish Line</string>
     <string name="invoicecreate_cancelline">Cancel Line</string>
+    <string name="cancel">Cancel</string>
 
     <string-array name="states">
         <item>AL</item>
