--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,7 @@
     <string name="invoicecreate_finishline">Finish Line</string>
     <string name="invoicecreate_cancelline">Cancel Line</string>
     <string name="cancel">Cancel</string>
+    <string name="fragmentinvoice_backtopreview">BACK TO PREVIEW</string>
 
     <string-array name="states">
         <item>AL</item>
