--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="company">Company Name</string>
     <string name="fax_number">Fax Number</string>
     <string name="city">City</string>
+    <string name="licesneNumber">License Number</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_Options">Options</string>
