--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_Options">Options</string>
+    <string name="accountInfo">Account Information</string>
     <string name="fragment_options_Logout">LOGOUT</string>
 
     <string name="reports_navigation_frag_text">Reports</string>
