Implemented Registration google places. Doesn't complete registration, just shows a toast on selection. Also made buttons on Registration and Login borderless to test.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,7 @@
     <string name="invoicecreate_cancelline">Cancel Line</string>
     <string name="cancel">Cancel</string>
     <string name="fragmentinvoice_backtopreview">BACK TO PREVIEW</string>
+    <string name="register_Continue">CONTINUE</string>
 
     <string-array name="states">
         <item>AL</item>
@@ -134,4 +135,5 @@
         <item>WI</item>
         <item>WY</item>
     </string-array>
+    <string name="title_activity_register_place_picker">RegisterPlacePickerActivity</string>
 </resources>
